crates/rpstate-macros/tests/fails/lookup_type_mismatch.stderr
error[E0277]: the trait bound `ReadOnly<u16>: TypeCheck<String>` is not satisfied
  --> tests/fails/lookup_type_mismatch.rs:11:22
   |
11 |     #[state(lookup = "port", parent = NetworkState)]
   |                      ^^^^^^ the trait `TypeCheck<String>` is not implemented for `ReadOnly<u16>`
   |
help: the trait `TypeCheck<String>` is not implemented for `ReadOnly<u16>`
      but trait `TypeCheck<u16>` is implemented for it
  --> tests/fails/lookup_type_mismatch.rs:11:22
   |
11 |     #[state(lookup = "port", parent = NetworkState)]
   |                      ^^^^^^
   = help: for that trait implementation, expected `u16`, found `String`
note: required by a bound in `assert_field_type_matches_lookup`
  --> tests/fails/lookup_type_mismatch.rs:11:22
   |
11 |     #[state(lookup = "port", parent = NetworkState)]
   |                      ^^^^^^ required by this bound in `assert_field_type_matches_lookup`
